Fix button alignment.

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,7 @@ html {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    line-height: 0;
   }
 
   .transparent-button {
